--- a/iPython_analysis/Redux 50 Checks.ipynb
+++ b/iPython_analysis/Redux 50 Checks.ipynb
@@ -241,7 +241,7 @@
     "plt.xlabel(\"Block Position\")\n",
     "plt.ylabel(\"RGB Ratio\")\n",
     "plt.legend(loc='upper left', shadow=False)\n",
-    "fig.show()"
+    "fig.show()\n"
    ]
   },
   {
